variables.RunFour.scala.error
Erreur de compilation :
RunFour:5: error: '(' expected but identifier found.
  if estSurBiscuit(){
     ^RunFour:8: error: illegal start of simple expression
} 
^